fixed spacing issues

--- a/K_M_B/Kairos/Kairos.css
+++ b/K_M_B/Kairos/Kairos.css
@@ -325,14 +325,14 @@ div.scrollmenu img{
 .vertical-bar{
   width: 3px;
   border-radius: 30px;
-  height: 1050px;
+  height: 1190px;
   background-color: #ffffff;
 }
 
 .about-1{
   width: 500px;
   height: 400px;
-  margin-top:120px;
+  margin-top:100px;
   margin-left: 20px;
   background-color: black;
 }
@@ -357,7 +357,7 @@ div.scrollmenu img{
 .about-2{
   width: 500px;
   height: 400px;
-  margin-top: -100px;
+  margin-top: -50px;
   margin-left: 20px;
   background-color: black;
 }
@@ -383,9 +383,8 @@ div.scrollmenu img{
 .about-3{
   width: 500px;
   height: 400px;
-  margin-top: -100px;
+  margin-top: 30px;
   margin-left: 20px;
-  background-color: black;
 }
 
 .when-leave{
